update google sitemap property
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@37443 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -205,7 +205,7 @@ MCR.Application.Login.StartLink.editprofessorum=showWorkspace.action?mcrobjid_ba
 # frequence for google access
 # allways - hourly - daily - weekly - monthly - yearly - never
 MCR.GoogleSitemap.Freq=monthly
-MCR.GoogleSitemap.Types=person
+MCR.GoogleSitemap.SolrQuery=objectType:person
 
 # define the log4j layout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %t [CPR] %-5p %c - %m%n
