--- a/profkat-sample/build.xml
+++ b/profkat-sample/build.xml
@@ -3,19 +3,21 @@
 <!-- MyCoRe sample application build file for use with Apache Ant        -->
 <!-- $Revision$ $Date$                      							 -->
 <!-- =================================================================== -->
-<project name="Profkat Sample"  basedir=".">
+<project name="profkat-sample_build"  basedir=".">
 	<property name="APP_NAME" value="profkat-sample" />
+	
 	<property name="SOLR_DEFAULT_CONFIG_URL" value="http://artifactory.mycore.de/libs-releases/org/mycore/solr/solr-home/4.10.4/solr-home-4.10.4.zip" />
 	<property name="SOLR_CORE_ID" value="${APP_NAME}" />
-	<condition property="SOLR_HOME_DIR" value="/opt/solr" else="c:\workspaces\SOLR">
+	<condition property="SOLR_HOME_DIR" value="/data/solr" else="c:\workspaces\rosdok_2017\solr-home\data">
 		<os family="unix" />
 	</condition>
-	<property name="SOLR_CONF_DIR" value="${basedir}/${APP_NAME}-cli/src/main/config/solr-conf" />
 		
 	<condition property="CLI_HOME" value="${basedir}/${APP_NAME}-cli" else="${basedir}/${APP_NAME}-cli/target/appassembler">
 		<os family="unix" />
 	</condition>
-		
+	
+	<property name="SOLR_CONF_DIR" value="${CLI_HOME}/config/solr-conf" />
+	
 	<property name="CONTENT_DIR" value="${CLI_HOME}/config" />
 		
 	<path id="CLI_CLASSPATH">
@@ -40,14 +42,14 @@
 				;; create directory ${MCR.EHCache.diskStore.path}" />
 		</java>
 		<!--
-			<taskdef name="mcr-execute" classname="org.mycore.buildtools.anttasks.MCRExecuteCommandTask" classpathref="APP_CLASSPATH" />
-			<mcr-execute>
-				create directory ${MCR.Editor.FileUpload.TempStoragePath}
-				create directory ${MCR.LogDirectory}
-				...
-			</mcr-execute>
+		<taskdef name="mcr-execute" classname="org.mycore.buildtools.anttasks.MCRExecuteCommandTask" classpathref="APP_CLASSPATH" />
+		<mcr-execute>
+			create directory ${MCR.Editor.FileUpload.TempStoragePath}
+			create directory ${MCR.LogDirectory}
+			...
+		</mcr-execute>
 		-->
-		</target>
+	</target>
 
 	<target name="create.users" depends="init">
 		<mkdir dir="${basedir}/target/user_encrypted" />
@@ -62,9 +64,9 @@
 				;; encrypt passwords in user xml file ${CONTENT_DIR}/user/user_administrator.xml to file ${basedir}/target/user_encrypted/user_administrator.xml
 				;; update user from file ${basedir}/target/user_encrypted/user_administrator.xml	
 					
-				;; encrypt passwords in user xml file ${CONTENT_DIR}/user/user_editorPK.xml to file ${basedir}/target/user_encrypted/user_editorPK.xml
-				;; update user from file ${basedir}/target/user_encrypted/user_editorPK.xml
-
+				;; encrypt passwords in user xml file ${CONTENT_DIR}/user/user_editorCP.xml to file ${basedir}/target/user_encrypted/user_editorCP.xml
+				;; update user from file ${basedir}/target/user_encrypted/user_editorCP.xml
+				
 				;; encrypt passwords in user xml file ${CONTENT_DIR}/user/user_editorWeb.xml to file ${basedir}/target/user_encrypted/user_editorWeb.xml
 				;; update user from file ${basedir}/target/user_encrypted/user_editorWeb.xml
 						
@@ -92,53 +94,40 @@
 		</java>
 	</target>
 
+	<target name="update.solr.config">
+				<mkdir  dir="${SOLR_HOME_DIR}" />
+				<get src="${SOLR_DEFAULT_CONFIG_URL}" dest="${SOLR_HOME_DIR}/solr-default-config.zip" />
+				<delete dir="${SOLR_HOME_DIR}/${SOLR_CORE_ID}/conf" />
+				<mkdir  dir="${SOLR_HOME_DIR}/${SOLR_CORE_ID}/conf" />
+				<unzip src="${SOLR_HOME_DIR}/solr-default-config.zip" dest="${SOLR_HOME_DIR}/${SOLR_CORE_ID}/conf">
+					<patternset>
+					        <include name="solr/collection1/conf/**"/>
+					    </patternset> 
+					<cutdirsmapper dirs="3"/>
+				</unzip>
+				<unzip src="${SOLR_HOME_DIR}/solr-default-config.zip" dest="${SOLR_HOME_DIR}">
+					<patternset>
+						<include name="solr/*.*"/>
+					</patternset> 
+					<cutdirsmapper dirs="1"/>
+				</unzip>
+				<copy todir="${SOLR_HOME_DIR}/${SOLR_CORE_ID}" overwrite="true">
+					<fileset dir="${SOLR_CONF_DIR}/cores/${SOLR_CORE_ID}" />
+				</copy>
+		</target>
+	
 	<target name="create.configuration.directory" >
 		<java fork="true" dir="${CLI_HOME}/lib" classpathref="CLI_CLASSPATH" classname="org.mycore.frontend.cli.MCRCommandLineInterface">
 			<sysproperty key="MCR.AppName" value="${APP_NAME}"/>
 			<arg value="create configuration directory" />
 		</java>
 	</target>
-	
-	<target name="repair.solr.index" >
-		<java fork="true" dir="${CLI_HOME}/lib" classpathref="CLI_CLASSPATH" classname="org.mycore.frontend.cli.MCRCommandLineInterface">
-			<sysproperty key="MCR.AppName" value="${APP_NAME}"/>
-			<arg value="repair metadata search of type person" />
-		</java>
-	</target>
-	
-	<target name="update.solr.config">
-		<mkdir  dir="${SOLR_HOME_DIR}" />
-		<get src="${SOLR_DEFAULT_CONFIG_URL}" dest="${SOLR_HOME_DIR}/data/solr-default-config.zip" />
-		<delete dir="${SOLR_HOME_DIR}/data/${SOLR_CORE_ID}" />
-		<mkdir  dir="${SOLR_HOME_DIR}/data/${SOLR_CORE_ID}" />
-		<unzip src="${SOLR_HOME_DIR}/data/solr-default-config.zip" dest="${SOLR_HOME_DIR}/data/${SOLR_CORE_ID}/conf">
-			<patternset>
-		        <include name="solr/collection1/conf/**"/>
-		    </patternset> 
-			<cutdirsmapper dirs="3"/>
-		</unzip>
-		<unzip src="${SOLR_HOME_DIR}/solr-default-config.zip" dest="${SOLR_HOME_DIR}/data">
-			<patternset>
-				<include name="solr/*.*"/>
-			</patternset> 
-			<cutdirsmapper dirs="1"/>
-		</unzip>
-		<copy todir="${SOLR_HOME_DIR}/data/${SOLR_CORE_ID}" overwrite="true">
-			<fileset dir="${SOLR_CONF_DIR}/cores/${SOLR_CORE_ID}" />
-		</copy>
-	</target>
-	
-	<target name="deploy.data.dir" >
-		<copy todir="${MCR_DATA_DIR}" overwrite="true">
-			<fileset dir="${CONTENT_DIR}/mcr_datadir" />
-		</copy>
-	</target>
 
 	<target name="zip4deployment">
-			<zip destfile="./target/${APP_NAME}_deploy.zip" >
-				<zipfileset dir="./${APP_NAME}-cli/target/appassembler" prefix="${APP_NAME}-cli"  />
-		    	<zipfileset file="./${APP_NAME}-webapp/target/${APP_NAME}.war" />
-				<zipfileset file="build.xml" />
-			</zip>
-		</target>
+		<zip destfile="./target/${APP_NAME}_deploy.zip" >
+			<zipfileset dir="./${APP_NAME}-cli/target/appassembler" prefix="${APP_NAME}-cli"  />
+	    	<zipfileset file="./${APP_NAME}-webapp/target/${APP_NAME}.war" />
+			<zipfileset file="build.xml" />
+		</zip>
+	</target>
 </project>
