--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -6,6 +6,9 @@ MCR.profkat.WBIS.user-ip.tubraunschweig=134\\.169\\..*
 
 MCRWorkflow.Email.Feedback.Subject=[Profkat Feedback] {0}
 
+MCR.Workflow.RetrieveMode.profkat=/mycoreobject[contains(@ID,'_person_')]
+MCR.Workflow.DerivateLabels.profkat=default,display_portrait,display_signature,display_biography,display_none
+
 ## SOLR search configuration
 #MCR.Searcher.lucene-metadata.Index=
 #MCR.Searcher.solr-metadata.Index=metadata
@@ -179,20 +182,21 @@ MCR.URIResolver.xslImports.solr-document=%MCR.URIResolver.xslImports.solr-docume
 # Workflow User / Group Assignment
 #
 ##############################################################################
-MCR.Activiti.TaskAssignment.CandidateGroups.create_object_simple.profkat_person=editprofessorum
+MCR.Activiti.TaskAssignment.CandidateGroups.create_object_simple.profkat=adminwf-profkat
 MCR.Activiti.TaskAssignment.CandidateUsers.edit_object.profkat_person=administrator
 MCR.Activiti.WorkflowMgr.Class.create_object_simple.default_person=org.mycore.activiti.workflows.create_object_simple.person.MCRWorkflowMgrPerson
 
-MCR.Activiti.MCRObject.Display.Title.XPath.profkat_person=concat(//metadata/box.surname/surname[1],', ',//metadata/box.firstname/firstname[1])
-MCR.Activiti.MCRObject.Display.Description.XPath.profkat_person=concat('<p>',//metadata/box.academictitle/academictitle,'</p><p> * ',//metadata/box.birth/birth/text[@xml:lang='de'],'&#160;&#160;&#160; &#10013; ',//metadata/box.death/death/text[@xml:lang='de'], '</p>')
 
+MCR.Workflow.MCRObject.Display.Title.XPath.default_person=concat(//metadata/box.surname/surname[1],', ',//metadata/box.firstname/firstname[1])
+MCR.Workflow.MCRObject.Display.Description.XPath.default_person=concat('<p>',//metadata/box.academictitle/academictitle,'</p><p> * ',//metadata/box.birth/birth/text[@xml:lang='de'],'&#160;&#160;&#160; &#10013; ',//metadata/box.death/death/text[@xml:lang='de'], '</p>')
 
 ##############################################################################
 # Startlink
 # last item in key should map to a group ID
 # value = a url                                                               
 ##############################################################################
-MCR.Application.Login.StartLink.editprofessorum=showWorkspace.action?mcr_base=%MCR.SWF.Project.ID%_person
+MCR.Application.Login.StartLink.adminwf-profkat=showWorkspace.action?mode=profkat
+MCR.Workflow.NewObjectBases.profkat=%MCR.SWF.Project.ID%_person
 
 
 # MyCoRe types for indexing objects, document is default
