--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -185,8 +185,8 @@ MCR.URIResolver.xslIncludes.solrResponse=%MCR.URIResolver.xslIncludes.solrRespon
 ##############################################################################
 MCR.Activiti.TaskAssignment.CandidateGroups.create_object_simple.profkat=adminwf-profkat
 MCR.Activiti.TaskAssignment.CandidateUsers.edit_object.profkat_person=administrator
-MCR.Activiti.WorkflowMgr.Class.create_object_simple.default_person=org.mycore.activiti.workflows.create_object_simple.person.MCRWorkflowMgrPerson
-
+#MCR.Activiti.WorkflowMgr.Class.create_object_simple.default_person=org.mycore.activiti.workflows.create_object_simple.person.MCRWorkflowMgrPerson
+MCR.Activiti.WorkflowMgr.Class.create_object_simple.profkat=org.mycore.activiti.workflows.create_object_simple.person.MCRWorkflowMgrPerson
 
 MCR.Workflow.MCRObject.Display.Title.XPath.default_person=concat(//metadata/box.surname/surname[1],', ',//metadata/box.firstname/firstname[1])
 MCR.Workflow.MCRObject.Display.Description.XPath.default_person=concat('<p>',//metadata/box.academictitle/academictitle,'</p><p> * ',//metadata/box.birth/birth/text[@xml:lang='de'],'&#160;&#160;&#160; &#10013; ',//metadata/box.death/death/text[@xml:lang='de'], '</p>')
