update pom.xml for 2019.06 LTS
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@38139 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/pom.xml
+++ b/profkat-base-module/pom.xml
@@ -3,11 +3,12 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.mycore</groupId>
-    <artifactId>mycore</artifactId>
-    <version>2019.06.1-SNAPSHOT</version>
+    <artifactId>mycore-application-starter</artifactId>
+    <version>2019.06.3-SNAPSHOT</version>
   </parent>
   <groupId>org.mycore.profkat</groupId>
   <artifactId>profkat-base-module</artifactId>
+  <version>2019.06-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Professorenkatalog Base</name>
   <description>generic code for professorenkatalog</description>
