--- a/profkat-base-module/pom.xml
+++ b/profkat-base-module/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <groupId>org.mycore</groupId>
     <artifactId>mycore-application-starter</artifactId>
-    <version>2019.06.3-SNAPSHOT</version>
+    <version>2020.06.0-SNAPSHOT</version>
   </parent>
   <groupId>org.mycore.profkat</groupId>
   <artifactId>profkat-base-module</artifactId>
-  <version>2019.06-SNAPSHOT</version>
+  <version>2020.06-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Professorenkatalog Base</name>
   <description>generic code for professorenkatalog</description>
@@ -51,50 +51,7 @@
     </resources>
 
     <!-- needed to execute maven-xml-plugin -->
-    <pluginManagement>
-      <plugins>
-        <!--This plugin's configuration is used to store Eclipse m2e settings 
-					only. It has no influence on the Maven build itself. -->
-        <plugin>
-          <groupId>org.eclipse.m2e</groupId>
-          <artifactId>lifecycle-mapping</artifactId>
-          <version>1.0.0</version>
-          <configuration>
-            <lifecycleMappingMetadata>
-              <pluginExecutions>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>xml-maven-plugin</artifactId>
-                    <versionRange>[1.0,)</versionRange>
-                    <goals>
-                      <goal>unpack</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <ignore />
-                  </action>
-                </pluginExecution>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-dependency-plugin</artifactId>
-                    <versionRange>[2.8,)</versionRange>
-                    <goals>
-                      <goal>unpack</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <ignore />
-                  </action>
-                </pluginExecution>
-              </pluginExecutions>
-            </lifecycleMappingMetadata>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-    <plugins>
+     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
@@ -108,150 +65,45 @@
           </archive>
         </configuration>
       </plugin>
-      <!-- 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>unpack</id>
-						<phase>generate-resources</phase>
-						<goals>
-							<goal>unpack</goal>
-						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>org.mycore</groupId>
-									<artifactId>mycore-base</artifactId>
-									<version>${project.version}</version>
-									<includes>xsl/MCRMetadata*.xsl</includes>
-									<overWrite>false</overWrite>
-									<outputDirectory>${project.build.outputDirectory}</outputDirectory>
-								</artifactItem>
-							</artifactItems>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>xml-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>compile</phase>
-						<goals>
-							<goal>transform</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<transformationSets>
-						<transformationSet>
-							<dir>src/main/config/datamodel</dir>
-							<outputDir>${project.build.outputDirectory}</outputDir>
-							<stylesheet>${project.build.outputDirectory}/xsl/MCRMetadataSchema.xsl</stylesheet>
-							<fileMappers>
-								<fileMapper implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
-									<targetExtension>.oldxsd</targetExtension>
-								</fileMapper>
-							</fileMappers>
-						</transformationSet>
-					</transformationSets>
-				</configuration>
-			</plugin>
-			 -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>unpack</id>
-            <goals>
-              <goal>unpack</goal>
-            </goals>
-            <phase>generate-resources</phase>
-            <configuration>
-              <artifactItems>
-                <artifactItem>
-                  <groupId>org.mycore.plugins</groupId>
-                  <artifactId>datamodel-plugin</artifactId>
-                  <version>0.6-SNAPSHOT</version>
-                  <includes>datamodel2*.xsl</includes>
-                  <excludes>datamodel2ext.xsl</excludes>
-                  <outputDirectory>${project.build.outputDirectory}/xsl</outputDirectory>
-                </artifactItem>
-              </artifactItems>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>xml-maven-plugin</artifactId>
-        <configuration>
-          <transformationSets>
-            <transformationSet>
-              <dir>src/main/datamodel/def</dir>
-              <outputDir>${project.build.outputDirectory}</outputDir>
-              <stylesheet>${project.build.outputDirectory}/xsl/datamodel2schema.xsl</stylesheet>
-              <fileMappers>
-                <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
-                  <targetExtension>.xsd</targetExtension>
-                </fileMapper>
-              </fileMappers>
-            </transformationSet>
-          </transformationSets>
-        </configuration>
-        <executions>
-          <execution>
-            <goals>
-              <goal>transform</goal>
-            </goals>
-            <phase>compile</phase>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
+     <plugin>
+	    <groupId>org.mycore.plugins</groupId>
+	    <artifactId>datamodel-plugin</artifactId>
+	  </plugin>
+	 </plugins>
+     <pluginManagement>
+     	<plugins>
+     		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+     		<plugin>
+     			<groupId>org.eclipse.m2e</groupId>
+     			<artifactId>lifecycle-mapping</artifactId>
+     			<version>1.0.0</version>
+     			<configuration>
+     				<lifecycleMappingMetadata>
+     					<pluginExecutions>
+     						<pluginExecution>
+     							<pluginExecutionFilter>
+     								<groupId>
+     									org.mycore.plugins
+     								</groupId>
+     								<artifactId>
+     									datamodel-plugin
+     								</artifactId>
+     								<versionRange>[0.7,)</versionRange>
+     								<goals>
+     									<goal>schema</goal>
+     								</goals>
+     							</pluginExecutionFilter>
+     							<action>
+     								<ignore></ignore>
+     							</action>
+     						</pluginExecution>
+     					</pluginExecutions>
+     				</lifecycleMappingMetadata>
+     			</configuration>
+     		</plugin>
+     	</plugins>
+     </pluginManagement>
   </build>
-  <repositories>
-    <repository>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-      <id>MyCoRe HQ</id>
-      <url>http://artifactory.mycore.de/mycore-releases</url>
-    </repository>
-    <repository>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <id>MyCoRe HQ Snapshots</id>
-      <url>http://artifactory.mycore.de/mycore-snapshots</url>
-    </repository>
-  </repositories>
-  <pluginRepositories>
-    <pluginRepository>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-      <id>MyCoRe HQ</id>
-      <url>http://artifactory.mycore.de/mycore-releases</url>
-    </pluginRepository>
-    <pluginRepository>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <id>MyCoRe HQ Snapshots</id>
-      <url>http://artifactory.mycore.de/mycore-snapshots</url>
-    </pluginRepository>
-  </pluginRepositories>
   <dependencies>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
@@ -278,8 +130,8 @@
       <artifactId>mycore-solr</artifactId>
     </dependency>
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
       <scope>provided</scope>
     </dependency>
   </dependencies>
